--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 permalink: /:categories/:title/
 url: "http://example.com"
-full_name: "Saigon Jekyll Theme"
+full_name: "Brynne E. Lycette"
 first_name: "Just"
 last_name: "Me"
 blog_title: "Title"
