--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ url: "http://example.com"
 full_name: "Brynne E. Lycette"
 first_name: "Brynne E."
 last_name: "Lycette""
-blog_title: "Title"
+blog_title: "Brynne E. Lycette"
 author_img_name_path: "/images/users/user.jpg"
 disqus_shortname: "example"
 copyright_year: "2016"
