--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 permalink: /:categories/:title/
-url: "http://example.com"
+url: "blycette.github.io"
 full_name: "Brynne E. Lycette"
 first_name: "Brynne E."
 last_name: "Lycette""
