--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 permalink: /:categories/:title/
 full_name: "Brynne E. Lycette"
 first_name: "Brynne E."
-last_name: "Lycette""
+last_name: "Lycette"
 blog_title: "Brynne E. Lycette"
 author_img_name_path: "/images/users/user.jpg"
 disqus_shortname: "example"
