--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,6 @@ blog_title: "Brynne E. Lycette"
 author_img_name_path: "/images/users/user.jpg"
 copyright_year: "2016"
 google_analytics_code: ""
+github_username:      blycette
+linkedin_username:    blycette@usfca.edu
+steam_username: the_schmex
