--- a/_config.yml
+++ b/_config.yml
@@ -8,5 +8,5 @@ author_img_name_path: "/images/users/user.jpg"
 copyright_year: "2016"
 google_analytics_code: ""
 github_username:      blycette
-linkedin_username:    blycette@usfca.edu
-steam_username: the_schmex
+linkedin_username:    blycette
+steam_username: theschmex
